# boun-scrape

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  get-all.py
backend/: Dockerfile  README.md  departments.json  departments_all.json  parse_responses.py  parse_schedules_to_db.py  pyproject.toml  response.html  scrape_all_schedules.py  scrape_schedules.py  scraper.py
backend/app/: auth.py  database.py  main.py  quota.py  routes.py  scraping.py
data/: ASIA.csv  ATA.csv  BIO.csv  CEM.csv  CET.csv  CHE.csv  CHEM.csv  COGS.csv  DSAI.csv  EC.csv  ED.csv  ENV.csv  ENVT.csv  EQE.csv  GPH.csv  GUID.csv  IE.csv  INCT.csv  LL.csv  MATH.csv  ME.csv  MECA.csv  PF.csv  PHIL.csv  PHYS.csv  POLS.csv  SCED.csv  SCO.csv  SWE.csv  TKL.csv  TR.csv  TRM.csv  WTR.csv  YADYOK.csv
data/1976-1977-2/: GUID.csv
data/1979-1980-1/: GUID.csv
data/1980-1981-1/: PHIL.csv
data/1983-1984-2/: GUID.csv
data/1986-1987-1/: GUID.csv  LL.csv  PHYS.csv  PSY.csv  TR.csv
frontend/: Dockerfile  FRONTEND_SPECS.md  README.md  eslint.config.js  index.html  nginx.conf  package.json
html/: AD.html  BIO.html  BIS.html  CCS.html  CE.html  CET.html  CHEM.html  CMPE.html  CSE.html  DSAI.html  EC.html  EE.html  EQE.html  FE.html  GPH.html  INCT.html  INTT.2.html  INTT.html  LING.html  LL.2.html  LL.html  LS.html  ME.html  MECA.2.html  MIR.2.html  PA.html  PE.html  PHYS.html  POLS.html  PRED.html  PRSO.html  SCED.html  SCO.html  SPL.html  SWE.2.html  TKL.html  TR.html  TRM.2.html  TRM.html  WTR.html  (+1 more)
lists/: programs_html.html  programs_list.json  semesters.txt
(+7076 files in other folders)
